# htr-iiif-claude

./: README.md  htr_describe_from_csv.py  pyproject.toml
.github/workflows/: test.yml
htr_iiif_claude/: __init__.py  htr.py
htr_iiif_claude/claude/: __init__.py  claude.py
htr_iiif_claude/image/: image.py
htr_iiif_claude/manifest/: manifest.py
