[tool.poetry]
name = "htr-iiif-claude"
version = "0.1.1"
description = "Generate HTR from IIIF Resources"
authors = ["Mark Baggett <markpbaggett@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8 || ^3.9 || ^3.10 || ^3.11 || ^3.12"
anthropic = "^0.29.0"
httpx = "^0.27.0"
click = "^8.1.7"
tqdm = "^4.66.4"

[tool.poetry.scripts]
htr = "htr_iiif_claude.htr:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
